# aoc2024

./: Cargo.toml  README.md
src/: input.rs  lib.rs  main.rs  sample.rs
src/collections/: grid.rs
