[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.54.0"
clap = "4.5.21"
clap-verbosity-flag = { version = "3.0.1", features = ["tracing"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
num = "0.4.3"
paste = "1.0.15"
rayon = "1.10.0"
regex = "1.11.1"
test-log = { version = "0.2.16", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
rstest = "0.23.0"
